--- a/web/WEB-INF/view/write.html
+++ b/web/WEB-INF/view/write.html
@@ -22,7 +22,7 @@
     <h1 class='text-xl font-bold mb-6'>✏️ 글 작성하기</h1>
 
     <!-- 폼 -->
-    <form action='/addPost' method='post'>
+    <form action='/write' method='post'>
         제목<input type='text' name='title' placeholder='제목' required
                  class='w-full border p-2 rounded mb-3'>
 
